<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="#0099fb">

            <TextView
                android:id="@+id/tv_report_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="修改密码"
                android:textColor="@android:color/white"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/modify_password_page_input_old_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="Display name"
            android:hint="请输入原先的密码"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/reg_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <EditText
            android:id="@+id/modify_password_page_input_new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_password"
            android:hint="请输入新密码"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/passwd_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayname" />

        <EditText
            android:id="@+id/modify_password_page_confirm_new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_passwd_check"
            android:hint="再次确认新密码"
            android:imeActionLabel="@string/action_sign_up_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/modify_password_page_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="返回"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin" />
                <Button
                    android:id="@+id/modify_password_page_confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="保存修改"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>